--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Checker</title>
-    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <h2>Palindrome Checker</h2>
-    <input type="text" id="textInput" placeholder="Enter text">
-    <button onclick="checkIfPalindrome()">Check</button>
-    <p id="result"></p>
+    <div class="container">
+        <h2>Palindrome Checker</h2>
+        <div class="stack">
+            <input type="text" id="textInput" placeholder="Enter text">
+            <button onclick="checkPalindrome()">Check</button>
+            <p id="result"></p>
+        </div>
+    </div>
 </body>
 </html>
