--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Palindrome Checker</h2>
         <div class="stack">
             <input type="text" id="textInput" placeholder="Enter text">
-            <button onclick="checkPalindrome()">Check</button>
+            <button onclick="checkIfPalindrome()">Check</button>
             <p id="result"></p>
         </div>
     </div>
